Deduplicated liftType